--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ tiktoken = "^0.8.0"
 langchain-ollama = "^0.2.0"
 python-dotenv = "^1.0.1"
 torch = "2.0.1"
+streamlit = "^1.41.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
