Deploy FastAPI and Streamlit app

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ langchain-ollama = "^0.2.0"
 python-dotenv = "^1.0.1"
 torch = "2.0.1"
 streamlit = "^1.41.1"
+uvicorn = "^0.34.0"
+fastapi = "^0.115.8"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
